--- a/resources/css/datatable_style.css
+++ b/resources/css/datatable_style.css
@@ -166,27 +166,35 @@
 
 #services-table th:nth-child(1),
 #services-table td:nth-child(1) {
-    width: 5%; /* Kolom pertama lebih kecil */
+    width: 3%; /* Kolom pertama lebih kecil */
 }
 
 #services-table th:nth-child(2),
 #services-table td:nth-child(2) {
-    width: 35%; /* Kolom kedua lebih besar */
+    width: 5%; /* Kolom kedua lebih besar */
 }
 
 #services-table th:nth-child(3),
 #services-table td:nth-child(3) {
-    width: 20%;
+    width: 40%;
 }
 
 #services-table th:nth-child(4),
 #services-table td:nth-child(4) {
-    width: 20%;
+    width: 15%;
 }
 
 #services-table th:nth-child(5),
 #services-table td:nth-child(5) {
-    width: 20%;
+    width: 10%;
+}
+#services-table th:nth-child(5),
+#services-table td:nth-child(5) {
+    width: 15%;
+}
+#services-table th:nth-child(5),
+#services-table td:nth-child(5) {
+    width: 10%;
 }
 
 
@@ -270,6 +278,75 @@
 
 
 /* CSS FOR SPAREPART TABLE */
+#hp-merk-table_filter input {
+    width: 200px;
+    border-radius: 5px;
+    padding: 6px;
+    border: 1px solid #ced4da;
+    margin-right: 10px;
+}
+
+#hp-merk-table thead {
+    background-color: rgb(234, 234, 234);
+    color: rgb(111, 111, 111);
+    font-weight: bold;
+}
+
+/* Gaya Hover Row */
+#hp-merk-table tbody tr:hover {
+    background-color: #f2f2f2;
+}
+
+#hp-merk-table tbody tr td {
+    padding: 15px 15px; /* Atur padding atas-bawah & kiri-kanan */
+}
+
+
+#hp-merk-table_filter input {
+    width: 200px;
+    border-radius: 5px;
+    padding: 6px;
+    border: 1px solid #ced4da;
+}
+
+
+#hp-merk-table_filter {
+    margin-right: 20px
+}
+
+#custom-table-length {
+    margin-left: 10px
+}
+
+#hp-merk-table th:nth-child(1),
+#hp-merk-table td:nth-child(1) {
+    width: 5%; /* Kolom pertama lebih kecil */
+}
+
+#hp-merk-table th:nth-child(2),
+#hp-merk-table td:nth-child(2) {
+    width: 10%; /* Kolom kedua lebih besar */
+}
+
+#hp-merk-table th:nth-child(3),
+#hp-merk-table td:nth-child(3) {
+    width: 60%;
+}
+
+#hp-merk-table th:nth-child(4),
+#hp-merk-table td:nth-child(4) {
+    width: 5%;
+}
+
+
+
+
+
+
+
+
+
+/* CSS FOR MERK TABLE */
 #spareparts-table_filter input {
     width: 200px;
     border-radius: 5px;
@@ -338,3 +415,69 @@
 
 
 
+
+
+
+
+
+
+/* CSS FOR model hp TABLE */
+#hp-model-table_filter input {
+    width: 200px;
+    border-radius: 5px;
+    padding: 6px;
+    border: 1px solid #ced4da;
+    margin-right: 10px;
+}
+
+#hp-model-table thead {
+    background-color: rgb(234, 234, 234);
+    color: rgb(111, 111, 111);
+    font-weight: bold;
+}
+
+/* Gaya Hover Row */
+#hp-model-table tbody tr:hover {
+    background-color: #f2f2f2;
+}
+
+#hp-model-table tbody tr td {
+    padding: 15px 15px; /* Atur padding atas-bawah & kiri-kanan */
+}
+
+
+#hp-model-table_filter input {
+    width: 200px;
+    border-radius: 5px;
+    padding: 6px;
+    border: 1px solid #ced4da;
+}
+
+
+#hp-model-table_filter {
+    margin-right: 20px
+}
+
+#custom-table-length {
+    margin-left: 10px
+}
+
+#hp-model-table th:nth-child(1),
+#hp-model-table td:nth-child(1) {
+    width: 5%; /* Kolom pertama lebih kecil */
+}
+
+#hp-model-table th:nth-child(2),
+#hp-model-table td:nth-child(2) {
+    width: 10%; /* Kolom kedua lebih besar */
+}
+
+#hp-model-table th:nth-child(3),
+#hp-model-table td:nth-child(3) {
+    width: 60%;
+}
+
+#hp-model-table th:nth-child(4),
+#hp-model-table td:nth-child(4) {
+    width: 5%;
+}
