--- a/resources/css/datatable_style.css
+++ b/resources/css/datatable_style.css
@@ -481,3 +481,97 @@
 #hp-model-table td:nth-child(4) {
     width: 5%;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* CSS FOR model hp TABLE */
+#booking-table_filter input {
+    width: 200px;
+    border-radius: 5px;
+    padding: 6px;
+    border: 1px solid #ced4da;
+    margin-right: 10px;
+}
+
+#booking-table thead {
+    background-color: rgb(234, 234, 234);
+    color: rgb(111, 111, 111);
+    font-weight: bold;
+}
+
+/* Gaya Hover Row */
+#booking-table tbody tr:hover {
+    background-color: #f2f2f2;
+}
+
+#booking-table tbody tr td {
+    padding: 15px 15px; /* Atur padding atas-bawah & kiri-kanan */
+}
+
+
+#booking-table_filter input {
+    width: 200px;
+    border-radius: 5px;
+    padding: 6px;
+    border: 1px solid #ced4da;
+}
+
+
+#booking-table_filter {
+    margin-right: 20px
+}
+
+#custom-table-length {
+    margin-left: 10px
+}
+
+#booking-table th:nth-child(1),
+#booking-table td:nth-child(1) {
+    width: 5%; /* Kolom pertama lebih kecil */
+}
+
+#booking-table th:nth-child(2),
+#booking-table td:nth-child(2) {
+    width: 10%; /* Kolom kedua lebih besar */
+}
+
+#booking-table th:nth-child(3),
+#booking-table td:nth-child(3) {
+    width: 30%;
+}
+
+#booking-table th:nth-child(4),
+#booking-table td:nth-child(4) {
+    width: 15%;
+}
+
+#booking-table th:nth-child(5),
+#booking-table td:nth-child(5) {
+    width: 20%;
+}
+
+#booking-table th:nth-child(6),
+#booking-table td:nth-child(6) {
+    width: 10%;
+}
+
+#booking-table th:nth-child(7),
+#booking-table td:nth-child(7) {
+    width: 10%;
+}
+#booking-table th:nth-child(8),
+#booking-table td:nth-child(8) {
+    width: 5%;
+}
