update table transaction

--- a/resources/css/datatable_style.css
+++ b/resources/css/datatable_style.css
@@ -549,12 +549,12 @@
 
 #booking-table th:nth-child(3),
 #booking-table td:nth-child(3) {
-    width: 30%;
+    width: 20%;
 }
 
 #booking-table th:nth-child(4),
 #booking-table td:nth-child(4) {
-    width: 15%;
+    width: 30%;
 }
 
 #booking-table th:nth-child(5),
@@ -564,6 +564,11 @@
 
 #booking-table th:nth-child(6),
 #booking-table td:nth-child(6) {
-    width: 10%;
+    width: 15%;
+}
+
+#booking-table th:nth-child(7),
+#booking-table td:nth-child(7) {
+    width: 5%;
 }
 
